--- a/sourcecode/Euston_Leisure_Messaging/Euston_Leisure_Messaging/MainWindow.xaml
+++ b/sourcecode/Euston_Leisure_Messaging/Euston_Leisure_Messaging/MainWindow.xaml
@@ -1,8 +1,11 @@
 ﻿<Window x:Class="Euston_Leisure_Messaging.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="647.015" Width="811.568">
     <Grid>
-        
+        <Label Content="Euston Leisure Message Filtering Service" HorizontalAlignment="Left" Margin="198,24,0,0" VerticalAlignment="Top" Height="39" Width="399" FontSize="20" FontWeight="Bold"/>
+        <Button x:Name="btnInput" Content="Message Input" HorizontalAlignment="Left" VerticalAlignment="Top" Width="219" Margin="262,127,0,0" Height="43" Click="btnInput_Click"/>
+        <TextBox HorizontalAlignment="Left" Height="283" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="631" Margin="83,311,0,0"/>
+
     </Grid>
 </Window>
